--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'"
   },
   "dependencies": {
+    "@primevue/themes": "^4.0.0",
     "pinia": "^2.1.7",
+    "primevue": "^4.0.0",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
