--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@primevue/themes": "^4.0.0",
     "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
     "pinia": "^2.1.7",
     "primevue": "^4.0.0",
     "vue": "^3.4.29",
