--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "dwads",
-  "version": "0.0.0",
+  "name": "recicoin",
+  "version": "1.0.0",
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview",
     "test:unit": "vitest",
@@ -16,6 +16,7 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "pinia": "^2.1.7",
+    "primeicons": "^7.0.0",
     "primevue": "^4.0.0",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
