--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@primevue/themes": "^4.0.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "leaflet": "^1.9.4",
     "pinia": "^2.1.7",
     "primeicons": "^7.0.0",
     "primevue": "^4.0.0",
