--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.3.3",
     "leaflet": "^1.9.4",
     "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^3.2.1",
     "primeicons": "^7.0.0",
     "primevue": "^4.0.0",
     "vue": "^3.4.29",
