--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@vue/test-utils": "^2.4.6",
     "cypress": "^13.12.0",
     "jsdom": "^24.1.0",
+    "sass": "^1.77.8",
     "start-server-and-test": "^2.0.4",
     "vite": "^5.3.1",
     "vitest": "^1.6.0"
